--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
+ "scripts": {
+    "server": "npx parcel src/index.html",
+    "build": "npx parcel build ./src/javascript/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
